--- a/MiniHipsApiDetours/MiniHipsApiDetours.vcxproj.filters
+++ b/MiniHipsApiDetours/MiniHipsApiDetours.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MiniHIPS.h">
+    <ClInclude Include="MiniHipsApiDetours.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
@@ -29,7 +29,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MiniHIPS.cpp">
+    <ClCompile Include="MiniHipsApiDetours.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
